Page flickering issue fixed during page load.

--- a/GPD.WEB/Content/Site.css
+++ b/GPD.WEB/Content/Site.css
@@ -66,6 +66,10 @@ a.data-link {
     background-color: #337ab7;
     border-color: #2e6da4;
 }
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x- ng-cloak {
+    display: none !important;
+}
 /*====== Bootstrap Override End ===================*/
 @media only screen and (min-width : 321px) and (max-width : 480px) {
 }
